--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -144,7 +144,7 @@
       </div>
 
       <div class="product-card">
-        <img src="https://picsum.photos/300/220?random=6" alt="Perfume 6">
+        <img src="https://lh5.googleusercontent.com/a-98FF20GSw5H_lZVc3lisuSzE2HlsO6zpWDYTVu4TTNIdggTnmHW8qlqbC4h4cDcTKm94xQ7buD1XcTtSE21vseRu61eQHdduRCKIovmrJOWt_jhSIBh7kSW6FM08oO9MymskCVpVTnYZ7NLeCGja7PfeOS0eeNPwzIFAcYlqzFnZvTtt4LDw=w1280" alt="Perfume 6">
         <h3>Malik Al Oud</h3>
         <p>A royal luxurious oud fragrance with a rich oriental scent.</p>
         <div class="price"><span class="old">$85</span><span class="new">$65</span></div>
