--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -152,7 +152,7 @@
       </div>
 
       <div class="product-card">
-        <img src="https://picsum.photos/300/220?random=7" alt="Perfume 7">
+        <img src="https://lh5.googleusercontent.com/ezlHRcZ8RkWx-BTHkQ2Q_MMs6fSTxmPE3NdtBTXrqMfwI0N778DQbG01-rw8IkCy0UmughO3HRCBi-bdVdycHkwR_vqSM3Dr6G3EdZQ6IdOg4L84rb697rcjPf9WkzGHQHSgoNp2ig=w1280" alt="Perfume 7">
         <h3>Malik Al Oud Special</h3>
         <p>A special edition with an extraordinary luxurious oud essence.</p>
         <div class="price"><span class="old">$90</span><span class="new">$68</span></div>
