--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -115,7 +115,7 @@
         <img src="https://lh5.googleusercontent.com/KCEZd4cjiNDpC78_OlLyk7l5D-H8FMAw9UZjH8HKFqMQR1kQfi6uY4uyaeumcOutUeFif-cqmUeaGExtHpcjOrMFL8Tpu38p6gZqN98DFhUX_VWcclEfQFxeG_dFOLJJ8MmzUy5q_e7sKgKrEJlrHb2NjbpCYMJ3NkBg5xMjqopODw9XrvTv2w=w1280" alt="Perfume 2">
         <h3>Sultan Al Oud</h3>
         <p>A luxurious oriental fragrance with rich oud notes.</p>
-        <div class="price"><span class="old">$75</span><span class="new">$55</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -123,7 +123,7 @@
         <img src="https://lh5.googleusercontent.com/IyhSGF87srapa1d7HIKol4rvEZp3fvOiE8bvUQHi7p_zvSD3h3P6ZgeDy3eLY0yVnAVtcVl4A7c4HhmWsIMEeMlgnDiX6j0lQ8ggbRJxofQfGxY-TdJ2PF0IovuQ4THdKLIL-mulGsdoPB9E_JLRkNxUHCcxCyO2uwV5-geHBjAAe6uVKcswjw=w1280" alt="Perfume 3">
         <h3>Shaikh Zayed Oud</h3>
         <p>A warm luxurious oud fragrance with a distinctive oriental touch.</p>
-        <div class="price"><span class="old">$70</span><span class="new">$52</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -131,7 +131,7 @@
         <img src="https://lh3.googleusercontent.com/9l56LxXBqFux2bWwCdqWrF_YU8ylrtMlX-hh1eLSP5vbhcHsmI9ZZEkeJ_kYjlQ5n2CtxGg9RKnH0OHK-joQ6L7Rcnr1WxrSfxDTCXvIcMcx0Zirn5pbfH6gzYG5wWm_iim4JmXklJQ=w1280" alt="Perfume 4">
         <h3>Fakhar Al Oud</h3>
         <p>An authentic oriental oud fragrance with richness.</p>
-        <div class="price"><span class="old">$80</span><span class="new">$60</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -139,7 +139,7 @@
         <img src="https://lh5.googleusercontent.com/ZzzJb2QeglFvb4FKkWZ3YKQRCAFybMtZ0-ZCWpzV7aHf84VF_waD-kPiDBmlDdJL9lGpnLf-Q2hklD_F0F-ShH3Yg2vwVygrKobN8CQxf9e7JlajIMZ45qQpUKiQsnkuf8gVsxwihQJW8MU2Y_8qOpXbpuTr8HTyJZ0XhRBkt-1oloLsF4-q5Q=w1280" alt="Perfume 5">
         <h3>Oud Al Wajeh</h3>
         <p>A luxurious oud fragrance with a distinctive oriental essence.</p>
-        <div class="price"><span class="old">$65</span><span class="new">$48</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -147,7 +147,7 @@
         <img src="https://lh5.googleusercontent.com/a-98FF20GSw5H_lZVc3lisuSzE2HlsO6zpWDYTVu4TTNIdggTnmHW8qlqbC4h4cDcTKm94xQ7buD1XcTtSE21vseRu61eQHdduRCKIovmrJOWt_jhSIBh7kSW6FM08oO9MymskCVpVTnYZ7NLeCGja7PfeOS0eeNPwzIFAcYlqzFnZvTtt4LDw=w1280" alt="Perfume 6">
         <h3>Malik Al Oud</h3>
         <p>A royal luxurious oud fragrance with a rich oriental scent.</p>
-        <div class="price"><span class="old">$85</span><span class="new">$65</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -155,7 +155,7 @@
         <img src="https://lh5.googleusercontent.com/ezlHRcZ8RkWx-BTHkQ2Q_MMs6fSTxmPE3NdtBTXrqMfwI0N778DQbG01-rw8IkCy0UmughO3HRCBi-bdVdycHkwR_vqSM3Dr6G3EdZQ6IdOg4L84rb697rcjPf9WkzGHQHSgoNp2ig=w1280" alt="Perfume 7">
         <h3>Malik Al Oud Special</h3>
         <p>A special edition with an extraordinary luxurious oud essence.</p>
-        <div class="price"><span class="old">$90</span><span class="new">$68</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
@@ -163,7 +163,7 @@
         <img src="https://lh6.googleusercontent.com/iKCd6IZpxEgX1hEjyS5NYMq1B120ulApWk9LyhuxJymdBHYpFmSjgPDKrqUSJNA7dx3QCgCZUw4OvD67Wp_sgskX5pC2y6xddPDJ1kBSW7SzSlyrnnVlNj9l_g2_YFjK4syZBhFYN28_Pk7U44vaztXrYvEEbUgOfmlG3sPJ7ZilRARhfIX3hA=w1280" alt="Perfume 8">
         <h3>Sehr Al Kalimat</h3>
         <p>A mysterious oriental fragrance with alluring oud notes.</p>
-        <div class="price"><span class="old">$72</span><span class="new">$54</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
  
