--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -107,7 +107,7 @@
         <img src="https://lh6.googleusercontent.com/JqNoRMbdSDAXK3P7nX_0R59Ik-eJmU7t3NOPVxrn9P9C61ZhCa4kjwq9fIQ7WMBuEuYDMTZnNuTCqV-2jXgm-tzZwGSiwCg_1M23cCjFPM93vigkxs13p7DRRLJlQAs1GvZQAu9HB1IJ9HsADJqApIzPX3No9DXilT7jkQ_vIVfEKykQBIerLQ=w1280" alt="Perfume 1">
         <h3>Shaikh Zayed Musk</h3>
         <p>A luxurious musk fragrance with an elegant scent.</p>
-        <div class="price"><span class="old">$60</span><span class="new">$45</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
