--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -29,7 +29,7 @@
     .container {max-width: 1200px;margin: 0 auto;padding: 0 20px;}
 
     .hero {
-      background: url('https://images.unsplash.com/photo-1529070538774-1843cb3265df?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      background: url('https://images.pexels.com/photos/2954405/pexels-photo-2954405.jpeg') no-repeat center center/cover;
       color: white;text-align: center;padding: 100px 20px;
     }
     .hero h1 {font-size: 48px;margin-bottom: 15px;text-shadow: 1px 1px 8px rgba(0,0,0,0.6);}
