--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -112,10 +112,10 @@
       </div>
 
       <div class="product-card">
-        <img src="https://lh5.googleusercontent.com/KCEZd4cjiNDpC78_OlLyk7l5D-H8FMAw9UZjH8HKFqMQR1kQfi6uY4uyaeumcOutUeFif-cqmUeaGExtHpcjOrMFL8Tpu38p6gZqN98DFhUX_VWcclEfQFxeG_dFOLJJ8MmzUy5q_e7sKgKrEJlrHb2NjbpCYMJ3NkBg5xMjqopODw9XrvTv2w=w1280" alt="Perfume 2">
+        <img src="https://f.nooncdn.com/p/pzsku/Z90E5C76995BC3F926FA1Z/45/_/1712232374/d70f03e5-79c7-4395-8ac0-06b5c25bfeee.jpg?width=320" alt="Perfume 2">
         <h3>Sultan Al Oud</h3>
         <p>A luxurious oriental fragrance with rich oud notes.</p>
-        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
+        <div class="price"><span class="old">EGP699</span><span class="new">EGP498</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
