--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -120,10 +120,10 @@
       </div>
 
       <div class="product-card">
-        <img src="https://lh5.googleusercontent.com/IyhSGF87srapa1d7HIKol4rvEZp3fvOiE8bvUQHi7p_zvSD3h3P6ZgeDy3eLY0yVnAVtcVl4A7c4HhmWsIMEeMlgnDiX6j0lQ8ggbRJxofQfGxY-TdJ2PF0IovuQ4THdKLIL-mulGsdoPB9E_JLRkNxUHCcxCyO2uwV5-geHBjAAe6uVKcswjw=w1280" alt="Perfume 3">
+        <img src="https://f.nooncdn.com/p/pzsku/Z10CD32C77FF926134E41Z/45/1744655698/1072414c-3833-4928-ae24-a637af6e5bab.jpg?width=800" alt="Perfume 3">
         <h3>Shaikh Zayed Oud</h3>
         <p>A warm luxurious oud fragrance with a distinctive oriental touch.</p>
-        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
+        <div class="price"><span class="old">EGP599</span><span class="new">EGP398</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
