--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -144,15 +144,15 @@
       </div>
 
       <div class="product-card">
-        <img src="https://lh5.googleusercontent.com/a-98FF20GSw5H_lZVc3lisuSzE2HlsO6zpWDYTVu4TTNIdggTnmHW8qlqbC4h4cDcTKm94xQ7buD1XcTtSE21vseRu61eQHdduRCKIovmrJOWt_jhSIBh7kSW6FM08oO9MymskCVpVTnYZ7NLeCGja7PfeOS0eeNPwzIFAcYlqzFnZvTtt4LDw=w1280" alt="Perfume 6">
+        <img src="https://m.media-amazon.com/images/I/71KMFNyN-dL._UF894,1000_QL80_.jpg" alt="Perfume 6">
         <h3>Malik Al Oud</h3>
         <p>A royal luxurious oud fragrance with a rich oriental scent.</p>
-        <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
+        <div class="price"><span class="old">EGP599</span><span class="new">EGP398</span></div>
         <a href="#" class="btn">Shop Now</a>
       </div>
 
       <div class="product-card">
-        <img src="https://lh5.googleusercontent.com/ezlHRcZ8RkWx-BTHkQ2Q_MMs6fSTxmPE3NdtBTXrqMfwI0N778DQbG01-rw8IkCy0UmughO3HRCBi-bdVdycHkwR_vqSM3Dr6G3EdZQ6IdOg4L84rb697rcjPf9WkzGHQHSgoNp2ig=w1280" alt="Perfume 7">
+        <img src="https://www.trillingoexpress.com/cdn/shop/files/IMG-20230726-WA0037.jpg?v=1690389396" alt="Perfume 7">
         <h3>Malik Al Oud Special</h3>
         <p>A special edition with an extraordinary luxurious oud essence.</p>
         <div class="price"><span class="old">EGP699</span><span class="new">EGP499</span></div>
