--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services - Import & Export</title>
+  <title>Products - Import & Export</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* Reset */
@@ -171,7 +171,7 @@ function handleEnter(event) {
 
   <!-- Hero -->
   <section class="hero">
-    <h1>Our Import & Export Services</h1>
+    <h1>Our Import & Export Products</h1>
     <p>Connecting businesses worldwide with professional trade solutions</p>
   </section>
 
