--- a/products.html
+++ b/products.html
@@ -82,10 +82,13 @@
   <!-- Banner -->
   <header>
     <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" class="active">Marketplace</a>
+      <a href="about.html">Importers</a>
+      <a href="services.html">Exporters</a>
+      <a href="contact.html">Agencies Directory</a>
+      <a href="services.html">Factory Zone</a>
+      <a href="services.html">Business Hub</a>
+      <a href="services.html">Trader Stores</a>
     </nav>
     <!-- ====== Search Box ====== -->
 <div class="search-box">
