--- a/products.html
+++ b/products.html
@@ -82,13 +82,13 @@
   <!-- Banner -->
   <header>
     <nav>
-      <a href="index.html" class="active">Marketplace</a>
-      <a href="about.html">Importers</a>
-      <a href="services.html">Exporters</a>
-      <a href="contact.html">Agencies Directory</a>
-      <a href="services.html">Factory Zone</a>
-      <a href="services.html">Business Hub</a>
-      <a href="services.html">Trader Stores</a>
+      <a href="#" class="active">Marketplace</a>
+      <a href="importers.html">Importers</a>
+      <a href="exporters.html">Exporters</a>
+      <a href="agencies-directory.html">Agencies Directory</a>
+      <a href="factory-zone.html">Factory Zone</a>
+      <a href="business-hub.html">Business Hub</a>
+      <a href="trader-stores.html">Trader Stores</a>
     </nav>
     <!-- ====== Search Box ====== -->
 <div class="search-box">
