--- a/products.html
+++ b/products.html
@@ -83,12 +83,12 @@
   <header>
     <nav>
       <a href="#" class="active">Marketplace</a>
-      <a href="importers.html">Importers</a>
-      <a href="exporters.html">Exporters</a>
-      <a href="agencies-directory.html">Agencies Directory</a>
-      <a href="factory-zone.html">Factory Zone</a>
-      <a href="business-hub.html">Business Hub</a>
-      <a href="trader-stores.html">Trader Stores</a>
+      <a href="Importers.html">Importers</a>
+      <a href="Exporters.html">Exporters</a>
+      <a href="Agencies-Directory.html">Agencies Directory</a>
+      <a href="Factory-Zone.html">Factory Zone</a>
+      <a href="Business-Hub.html">Business Hub</a>
+      <a href="Trader-Stores.html">Trader Stores</a>
     </nav>
     <!-- ====== Search Box ====== -->
 <div class="search-box">
