--- a/products.html
+++ b/products.html
@@ -83,12 +83,12 @@
   <header>
     <nav>
       <a href="#" class="active">Marketplace</a>
-      <a href="Importers.html">Importers</a>
-      <a href="Exporters.html">Exporters</a>
-      <a href="Agencies-Directory.html">Agencies Directory</a>
-      <a href="Factory-Zone.html">Factory Zone</a>
-      <a href="Business-Hub.html">Business Hub</a>
-      <a href="Trader-Stores.html">Trader Stores</a>
+      <a href="Our-Network/Importers.html">Importers</a>
+      <a href="Our-Network/Exporters.html">Exporters</a>
+      <a href="Our-Network/Agencies-Directory.html">Agencies Directory</a>
+      <a href="Our-Network/Factory-Zone.html">Factory Zone</a>
+      <a href="Our-Network/Business-Hub.html">Business Hub</a>
+      <a href="Our-Network/Trader-Stores.html">Trader Stores</a>
     </nav>
     <!-- ====== Search Box ====== -->
 <div class="search-box">
