--- a/products.html
+++ b/products.html
@@ -258,7 +258,7 @@ function handleEnter(event) {
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Import & Export Services. All rights reserved.</p>
+    <p>&copy; 2025 Al Massria Al Emaratia - Marketplace. All rights reserved.</p>
   </footer>
 
 </body>
