--- a/Our-Network/Factory-Zone.html
+++ b/Our-Network/Factory-Zone.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(to right, #6dd5ed, #2193b0); /* Blue gradient */
+            background: linear-gradient(to right, #0F2027, #2C5364); /* Darker blue gradient */
             color: white;
             text-align: center;
         }
