--- a/home-ar.html
+++ b/home-ar.html
@@ -477,13 +477,13 @@
         <div class="footer-column">
           <h4>روابط سريعة</h4>
           <ul>
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="about.html">من نحن</a></li>
-            <li><a href="services.html">خدماتنا</a></li>
-            <li><a href="products.html">منتجاتنا</a></li>
-            <li><a href="careers.html">الوظائف</a></li>
-            <li><a href="faqs.html">الأسئلة الشائعة</a></li>
-            <li><a href="contact.html">اتصل بنا</a></li>
+            <li><a href="home-ar.html">الرئيسية</a></li>
+            <li><a href="about-ar.html">من نحن</a></li>
+            <li><a href="services-ar.html">خدماتنا</a></li>
+            <li><a href="products-ar.html">منتجاتنا</a></li>
+            <li><a href="careers-ar.html">الوظائف</a></li>
+            <li><a href="faqs-ar.html">الأسئلة الشائعة</a></li>
+            <li><a href="contact-ar.html">اتصل بنا</a></li>
           </ul>
         </div>
         <div class="footer-column">
@@ -505,8 +505,8 @@
       <div class="footer-bottom">
         <p>&copy; <span id="current-year-footer"></span> المصرية الإماراتية. جميع الحقوق محفوظة.</p>
         <div class="footer-legal-links">
-          <a href="privacy.html">سياسة الخصوصية</a> | 
-          <a href="terms.html">الشروط والأحكام</a> | 
+          <a href="privacy-ar.html">سياسة الخصوصية</a> | 
+          <a href="terms-ar.html">الشروط والأحكام</a> | 
           <a href="sitemap.xml">خريطة الموقع</a>
         </div>
       </div>
