Update and rename index.html to index-en.html

--- a/index-en.html
+++ b/index-en.html
@@ -345,7 +345,7 @@
         <li><a href="contact-en.html">Contact Us</a></li>
       </ul>
       <div class="language-switcher">
-        <a href="index.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
+        <a href="home-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
       </div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
