--- a/home-ar.html
+++ b/home-ar.html
@@ -345,7 +345,7 @@
         <li><a href="contact.html">اتصل بنا</a></li>
       </ul>
       <div class="language-switcher">
-        <a href="index.html" aria-label="English Language"><i class="fas fa-globe"></i> English</a>
+        <a href="index-en.html" aria-label="English Language"><i class="fas fa-globe"></i> English</a>
       </div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
