--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </a>
       </div>
       <ul class="nav-links">
-        <li><a href="index-en.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about-en.html">About Us</a></li>
         <li><a href="services-en.html">Services</a></li>
         <li><a href="faqs-en.html">FAQs</a></li>
