--- a/index.html
+++ b/index.html
@@ -477,13 +477,13 @@
         <div class="footer-column">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index-en.html">Home</a></li>
-            <li><a href="about-en.html">About Us</a></li>
-            <li><a href="services-en.html">Services</a></li>
-            <li><a href="products-en.html">Products</a></li>
-            <li><a href="careers-en.html">Careers</a></li>
-            <li><a href="faqs-en.html">FAQs</a></li>
-            <li><a href="contact-en.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="footer-column">
