--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about-en.html">About Us</a></li>
-        <li><a href="services-en.html">Services</a></li>
-        <li><a href="faqs-en.html">FAQs</a></li>
-        <li><a href="contact-en.html">Contact Us</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="language-switcher">
         <a href="home-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
@@ -505,9 +505,9 @@
       <div class="footer-bottom">
         <p>&copy; <span id="current-year-footer"></span> Al Massria Al Emaratia. All rights reserved.</p>
         <div class="footer-legal-links">
-          <a href="privacy-en.html">Privacy Policy</a> | 
-          <a href="terms-en.html">Terms & Conditions</a> | 
-          <a href="sitemap-en.xml">Sitemap</a>
+          <a href="privacy.html">Privacy Policy</a> | 
+          <a href="terms.html">Terms & Conditions</a> | 
+          <a href="sitemap.xml">Sitemap</a>
         </div>
       </div>
     </div>
