--- a/home-ar.html
+++ b/home-ar.html
@@ -339,10 +339,10 @@
       </div>
       <ul class="nav-links">
         <li><a href="home-ar.html" class="active">الرئيسية</a></li>
-        <li><a href="about.html">من نحن</a></li>
-        <li><a href="services.html">خدماتنا</a></li>
-        <li><a href="faqs.html">الأسئلة الشائعة</a></li>
-        <li><a href="contact.html">اتصل بنا</a></li>
+        <li><a href="about-ar.html">من نحن</a></li>
+        <li><a href="services-ar.html">خدماتنا</a></li>
+        <li><a href="faqs-ar.html">الأسئلة الشائعة</a></li>
+        <li><a href="contact-ar.html">اتصل بنا</a></li>
       </ul>
       <div class="language-switcher">
         <a href="index.html" aria-label="English Language"><i class="fas fa-globe"></i> English</a>
