--- a/about-ar.html
+++ b/about-ar.html
@@ -205,7 +205,7 @@
         <li><a href="contact-ar.html">اتصل بنا</a></li>
       </ul>
       <div class="language-switcher">
-        <a href="about-en.html" aria-label="English Language"><i class="fas fa-globe"></i> English</a>
+        <a href="about.html" aria-label="English Language"><i class="fas fa-globe"></i> English</a>
       </div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
