--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Egyptian Emirati</title>
+  <title>About Us | Al Masriya Al Emaratiya</title>
 
   <!-- Meta tags for SEO -->
   <meta name="description" content="Egyptian Emirati is a leading import and export company based in Egypt and the UAE, offering reliable trade, logistics, and commercial agency services worldwide.">
@@ -194,11 +194,11 @@
         <a href="index.html">
           <!-- Using a company logo image. This should be replaced with a professional, static logo. -->
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="Egyptian Emirati Logo" class="company-logo-header"> 
-          Egyptian Emirati
+          Al Masriya Al Emaratiya
         </a>
       </div>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="faqs.html">FAQs</a></li>
@@ -222,7 +222,7 @@
     <div class="text">
       <h2>About Us</h2>
       <p>
-        Established in 2010, <strong>Egyptian Emirati</strong> is a reliable import and export company 
+        Established in 2010, <strong>Al Masriya Al Emaratiya</strong> is a reliable import and export company 
         offering comprehensive trade and commercial agency services. With our strong roots in Egypt and the UAE, 
         we connect businesses globally through efficient logistics, transparent operations, and trusted partnerships.
       </p>
